Fixed the spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,15 +22,15 @@ body {
 .card {
   width: 320px;
   background: #fff;
-  margin: 100px auto;
+  margin: 254px auto;
   border-radius: 20px;
   text-align: center;
-  padding: 16px;
+  padding: 16px 16px 40px 16px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .card__image {
-  margin-bottom: 40px;
+  margin-bottom: 24px;
 }
 
 .card__image img {
@@ -47,7 +47,6 @@ body {
 
 .card__description {
   font-size: 1rem;
-  margin-bottom: 40px;
   color: #68778d;
   line-height: 140%;
   letter-spacing: 0.2px;
@@ -56,6 +55,10 @@ body {
 .attribution {
   font-size: 11px;
   text-align: center;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translate(-50%);
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
